apps/prod/stac/stac-browser-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: stac-browser
  namespace: stac
spec:
  template:
    spec:
      containers:
        - name: stac-browser
